fix: contrast of red primary and secondary color in dark mode

--- a/app/_assets/stylesheets/index.css
+++ b/app/_assets/stylesheets/index.css
@@ -128,7 +128,7 @@
     --color-shadow-primary: 2, 20, 40, 0.08;
 
     --color-semantic-red-primary: 214, 67, 67;
-    --color-semantic-red-secondary: 79, 28, 28;
+    --color-semantic-red-secondary: 44, 17, 17;
 
     --color-semantic-yellow-primary: 255, 198, 115;
     --color-semantic-yellow-secondary: 64, 42, 10;
